--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,9 @@
 .table {
   border-collapse: collapse;
   table-layout: auto;
-  overflow: hidden;
+  overflow-x: auto;
+  display: block;
+  max-width: 50vw;
   border-radius: 5px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px 0, rgba(0, 0, 0, 0.2) 1px 1px 2px 0;
           box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px 0, rgba(0, 0, 0, 0.2) 1px 1px 2px 0;
@@ -63,12 +65,13 @@
   width: 15px;
   height: 15px;
   opacity: 0;
-  margin: 0 5px;
+  margin: auto 5px;
   padding: 0;
   border: none;
   cursor: pointer;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  vertical-align: middle;
 }
 
 .table .head-cell__sort-btn {
@@ -120,6 +123,22 @@
   border: 1px solid #e0e0e0;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px 0, rgba(0, 0, 0, 0.2) 1px 1px 2px 0;
           box-shadow: rgba(0, 0, 0, 0.2) 0 3px 5px 0, rgba(0, 0, 0, 0.2) 1px 1px 2px 0;
+}
+
+.table {
+  scrollbar-color: #d4d4d4 #fff;
+  scrollbar-width: thin;
+}
+
+.table::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #fff;
+}
+
+.table::-webkit-scrollbar-thumb {
+  background-color: #d4d4d4;
+  border-radius: 6px;
 }
 
 .page-switcher {
